// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Overline Accepts style override 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "color": "rgba(28, 27, 31, 1)",
        "writingDirection": "ltr",
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        [
          {
            "color": "rgba(28, 27, 31, 1)",
            "letterSpacing": 2,
            "textTransform": "uppercase",
          },
          undefined,
          {
            "color": "blue",
            "fontSize": 9,
          },
        ],
      ],
    ]
  }
>
  Overline 
</Text>
`;

exports[`Overline Overline Renders 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "color": "rgba(28, 27, 31, 1)",
        "writingDirection": "ltr",
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        [
          {
            "color": "rgba(28, 27, 31, 1)",
            "letterSpacing": 2,
            "textTransform": "uppercase",
          },
          undefined,
          undefined,
        ],
      ],
    ]
  }
>
  Overline
</Text>
`;

exports[`Overline Renders the color correctly 1`] = `
<Text
  allowFontScaling={true}
  maxFontSizeMultiplier={100}
  style={
    [
      {
        "textAlign": "left",
      },
      {
        "color": "rgba(28, 27, 31, 1)",
        "writingDirection": "ltr",
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        [
          {
            "color": "rgba(28, 27, 31, 1)",
            "letterSpacing": 2,
            "textTransform": "uppercase",
          },
          undefined,
          undefined,
        ],
      ],
    ]
  }
>
  Overline 
</Text>
`;
